cabal-version:      3.0
name:               pred
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             TurtlePU
maintainer:         sokolov.p64@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common stanzas
    default-language:   GHC2024
    default-extensions:
        BlockArguments,
        ImportQualifiedPost,
        NoStarIsType,
        OverloadedRecordDot,
        OverloadedRecordUpdate,
        OverloadedStrings,
        RebindableSyntax,
        RecordWildCards,
    ghc-options:        -Wall -Werror

executable pred
    import:         stanzas
    ghc-options:    -threaded -rtsopts -with-rtsopts=-N
    hs-source-dirs: app
    main-is:        Main.hs
    -- other-modules:
    build-depends:
        base,
        directory,
        fontconfig-pure,
        optparse-applicative,
        pred,
        reactive-banana,
        resourcet,
        sdl2,
        text,
        tomland,

library
    import:          stanzas
    hs-source-dirs:  src
    exposed-modules:
        Pred.DisplayedText,
        Pred.Prelude,
        Pred.StableCache,
        Pred.TTF,
    build-depends:
        base,
        generic-lens,
        sdl2,
        sdl2-ttf,
        text,
        unordered-containers,
